[tool.isort]
skip_glob = ["*/deps/*", "*/build/*", "*/obselete/*"]
known_third_party = ["h5py", "hydra", "lmdb", "msgpack_numpy", "numpy", "omegaconf", "pointnet2_ops", "pytest", "pytorch_lightning", "setuptools", "torch", "torchvision", "tqdm"]
multi_line_output = 3
force_grid_wrap = false
line_length = 88
include_trailing_comma = true
use_parentheses = true

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | obselete
    | deps
  )/
)
'''

[tool.poetry]
name = "pointnet2"
version = "3.0.0"
description = ""
authors = ["Erik Wijmans"]
license = "unlicense"
readme = "README.rst"
packages = [
    { include = "pointnet2" },
    { include = "pointnet2_ops", from = "pointnet2_ops_lib" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
h5py = "^3.10.0"
lmdb = "^1.4.1"
msgpack-numpy = "^0.4.8"
pytorch-lightning = "^2.2.1"
torch = "<2.0.1"
torchvision = "<0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
